# tart_cargo

./: .gitignore  AGENTS.md  CHANGES.md  CITATION.cff  MANIFEST.in  README.md  pyproject.toml
.devcontainer/: README.md  devcontainer.json  post-create.sh
.github/workflows/: deploy_module.yaml
examples/: Makefile  README.md  example_recipe.yml  make-movie.yml  predict_recipe.yml  tart-gnss-acquire.yml
tartcargo/: disko-draw.yml  disko.yml  spotless.yml  stimela.conf  tart-download-data.yml  tart-get-archive-data.yml  tart-gnss-acquire.yml  tart-set-mode.yml  tart2ms.yml  tartball.yml
tartcargo/genesis/: tart-cargo-base.yml
test/: .gitignore  Makefile  example_recipe.yml  make-movie.yml  predict_recipe.yml  tart-gnss-acquire.yml
