[project]
name = "tart_cargo"
version = "0.4.11"
description = "Curated cargo of TART radio astronomy packages for stimela 2.0"
authors = [
    {name = "Tim Molteno",email = "tim@elec.ac.nz"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "<4.0,>=3.10"
dependencies = [
    "stimela>=2.0.1.1,<3.0.0",
    "requests>=2.33,<3.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tartcargo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
